--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<div class="hero-section text-center text-white d-flex align-items-center justify-content-center">
+  <div class="content bg-dark bg-opacity-75 p-5 rounded-4 shadow-lg">
+    <h1 class="display-3 fw-bold text-warning">El Sonido de la Leyenda</h1>
+    <p class="lead mb-4">Descubre nuestra colección exclusiva de guitarras Gibson y Epiphone.</p>
+    
+    <a routerLink="/galeria" class="btn btn-warning btn-lg fw-bold px-5">
+      🎸 Ver Catálogo
+    </a>
+  </div>
+</div>
