--- a/frontend/src/app/pages/galeria/galeria.html
+++ b/frontend/src/app/pages/galeria/galeria.html
@@ -33,10 +33,11 @@
               Ver 3D 🧊
             </a>
           </div>
-          
-          <button class="btn btn-warning w-100 fw-bold mt-3">
+          <button (click)="agregar(p)" class="btn btn-warning w-100 fw-bold mt-3">
             Agregar al Carrito 🛒
           </button>
+          
+        
         </div>
 
       </div>
