--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -1,7 +1,11 @@
-<app-navbar></app-navbar>
+<div class="d-flex flex-column min-vh-100">
 
-<div class="container mt-4">
-  <router-outlet></router-outlet>
+  <app-navbar></app-navbar>
+
+  <div class="container mt-4 flex-grow-1">
+    <router-outlet></router-outlet>
+  </div>
+
+  <app-footer></app-footer>
+
 </div>
-
-<app-footer></app-footer>
