--- a/frontend/src/app/pages/detalle-producto/detalle-producto.html
+++ b/frontend/src/app/pages/detalle-producto/detalle-producto.html
@@ -1,1 +1,36 @@
-<p>detalle-producto works!</p>
+<div class="container py-5 text-white" *ngIf="producto">
+  
+  <div class="row align-items-center">
+    <div class="col-md-6">
+      <span class="badge bg-warning text-dark mb-3">Vista Detallada</span>
+      <h1 class="fw-bold display-4">{{ producto.nombre }}</h1>
+      <p class="lead text-secondary">{{ producto.descripcion }}</p>
+      
+      <h2 class="text-warning fw-bold my-4 display-6">${{ producto.precio }}</h2>
+      
+      <div class="d-flex gap-3">
+        <button (click)="agregar()" class="btn btn-warning btn-lg fw-bold px-4">
+          Agregar al Carrito 🛒
+        </button>
+        <a routerLink="/galeria" class="btn btn-outline-light btn-lg">
+          Volver
+        </a>
+      </div>
+    </div>
+
+    <div class="col-md-6 d-flex justify-content-center mt-4 mt-md-0">
+      <div class="card bg-dark border-secondary shadow-lg">
+        <div class="card-header text-center text-white border-secondary small">
+          MODELO 3D INTERACTIVO
+        </div>
+        <div class="card-body p-0">
+          <canvas #canvas3d class="d-block mx-auto"></canvas>
+        </div>
+        <div class="card-footer text-center text-muted small border-secondary">
+          Girando en tiempo real
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
