--- a/frontend/src/app/pages/home/home.html
+++ b/frontend/src/app/pages/home/home.html
@@ -1,10 +1,19 @@
-<div class="hero-section text-center text-white d-flex align-items-center justify-content-center">
-  <div class="content bg-dark bg-opacity-75 p-5 rounded-4 shadow-lg">
-    <h1 class="display-3 fw-bold text-warning">El Sonido de la Leyenda</h1>
-    <p class="lead mb-4">Descubre nuestra colección exclusiva de guitarras Gibson y Epiphone.</p>
-    
-    <a routerLink="/galeria" class="btn btn-warning btn-lg fw-bold px-5">
-      🎸 Ver Catálogo
-    </a>
-  </div>
+<div class="split-hero-container">
+    <div class="hero-content">
+        <h2 class="text-secondary mb-3">The Original SG For A New Generation</h2>
+        <h1 class="display-3 fw-bold text-warning mb-4">SG Standard '61 2019</h1>
+        
+        <p class="lead text-white-50 mb-5 max-w-400">
+            En 1961 el modelo Les Paul Standard recibió un cambio radical que dio origen a la SG. Esta versión mantiene el estilo clásico y la potencia del modelo original.
+        </p>
+
+        <a routerLink="/galeria" class="btn btn-warning btn-lg fw-bold px-5">
+            VER CATÁLOGO
+        </a>
+    </div>
+
+    <div class="hero-image-container">
+        <img src="https://www.gibson.com/cdn/shop/files/SGSR61VOCHNH1_front.webp?v=1744040148&width=880" alt="Gibson SG" class="sg-image"> 
+        <span class="price-tag text-white">$1,799.00</span>
+    </div>
 </div>
